--- a/assets/css/stage2.css
+++ b/assets/css/stage2.css
@@ -18,7 +18,7 @@ main {
 }
 
 section {
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
     padding: 20px;
