--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,9 +265,9 @@ h6 {
 .navbar a:hover,
 .navbar .active,
 .navbar .active:focus,
-.navbar li:hover>a {
+/* .navbar li:hover>a {
   color: #d8d8d8;
-}
+} */
 
 /* Nouvelle règle pour la moitié droite */
 .navbar .navbar-right {
@@ -306,7 +306,7 @@ h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(233, 230, 230, 0.9);
+  background: rgba(0, 0, 0, 0.9);
   transition: 0.3s;
   z-index: 999;
   margin-top: 0;
